--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,7 +7,12 @@ body {
   background-color: #5f7d8b;
 }
 
+main {
+  margin: 20px;
+}
+
 nav {
+  margin: 0%;
   background-color: rgb(245, 50, 7);
   display: flex;
   justify-content: space-between;
